Silence node option check.
* Quiet up node option check.

It's been echoing "node: bad option: --openssl-legacy-provider" to the
CI logs.

This makes it so stdin / stderr / stdout of the process is a no-op.

* Use exec in ci scripts

Remove unused explicit classgraph dep from quine-cypher. This newer
version breaks when used with the webjars scanner in the reStart sbt
task.

* Remove embedded Cassandra

GitOrigin-RevId: d2833ee5f3e915df8a98d0f5c615fa408f71c4f3