@@ -1,14 +1,10 @@
 package com.thatdot.quine.persistor
 
 import java.net.{InetSocketAddress, Socket}
-import java.time.Duration
-
-import scala.util.Try
 
 import akka.actor.ActorSystem
 
 import com.datastax.oss.driver.api.core.DefaultConsistencyLevel
-import com.github.nosan.embedded.cassandra.{Cassandra, CassandraBuilder, WorkingDirectoryDestroyer}
 import com.typesafe.scalalogging.LazyLogging
 import org.scalatest.time.SpanSugar.convertIntToGrainOfTime
 
@@ -43,11 +39,6 @@ class CassandraPersistorSpec extends PersistenceAgentSpec {
 
   }
 
-  override def afterAll(): Unit = {
-    super.afterAll()
-    cassandraInstance.stop()
-  }
-
   lazy val persistor: PersistenceAgent = cassandraInstance.persistor
 
 }
@@ -67,25 +58,6 @@ abstract class CassandraTestInstance[T](implicit val system: ActorSystem) extend
    *   - unsupported architecture
    */
 
-  final lazy val embeddedCassandraTry: Try[Cassandra] = Try {
-    val cassandra = new CassandraBuilder()
-      .startupTimeout(Duration.ofMinutes(5))
-      .addJvmOptions( // Options to hopefully enable tests on as many
-        "-XX:+IgnoreUnrecognizedVMOptions",
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-      )
-      .workingDirectoryDestroyer(WorkingDirectoryDestroyer.deleteAll()) // don't keep anything
-      .build()
-    cassandra.start()
-    cassandra
-  }
-
   def buildFromAddress(maybeAddress: Option[InetSocketAddress]): T
 
   /** Try to establish if there's a local cassandra available for testing. */
@@ -102,19 +74,12 @@ abstract class CassandraTestInstance[T](implicit val system: ActorSystem) extend
     * to know if tests couldn't run).
     */
   private lazy val runnableAddress: Option[InetSocketAddress] =
-    if (sys.env.contains("CI") || embeddedCassandraTry.isSuccess) {
-
-      val settings = embeddedCassandraTry.get.getSettings
-      logger.warn(f"Using embedded cassandra settings: $settings")
-      Some(new InetSocketAddress(settings.getAddress, settings.getPort))
-    } else if (localCassandra) {
+    if (localCassandra) {
       logger.warn(f"Using local Cassandra")
       Some(new InetSocketAddress("127.0.0.1", 9042))
     } else {
       None
     }
-
-  def stop(): Unit = embeddedCassandraTry.foreach(_.stop())
 
   lazy val persistor: T = buildFromAddress(runnableAddress)
 
